2010-09-17  Francois Chouinard  <fchouinard@gmail.com>

	* plugin.xml: Fixed perspective ID
	* src/org/eclipse/linuxtools/lttng/ui/views/common/AbsTimeUpdateView.java: Adjusted to new handleData() API 
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramRequest.java: Adjusted to new handleData() API
	* src/org/eclipse/linuxtools/lttng/ui/views/PerspectiveFactory.java: Fixed perspective ID

2010-09-15  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/StatisticsView.java: ExecutionType update
	* src/org/eclipse/linuxtools/lttng/ui/views/resources/ResourcesView.java: ExecutionType update
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramView.java: ExecutionType update
	* src/org/eclipse/linuxtools/lttng/ui/views/controlflow/ControlFlowView.java: ExecutionType update
	* src/org/eclipse/linuxtools/lttng/ui/views/common/AbsTimeUpdateView.java: ExecutionType update

2010-09-12  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/events/EventsView.java: Fixed the events cache size

2010-09-09  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/project/ProjectView.java: Hook to LTTngExperiment

2010-07-30  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/ChildrenHistogramCanvas.java: 
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramCanvas.java: 
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramCanvasControlListener.java: 
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramCanvasFocusListener.java: 
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramCanvasKeyListener.java: 
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramCanvasMouseListener.java: 
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramCanvasPaintListener.java: 