@@ -1,3 +1,7 @@
+2010-10-06  Francois Chouinard  <fchouinard@gmail.com>
+
+	* src/org/eclipse/linuxtools/lttng/ui/views/common/AbsTimeUpdateView.java: Fixed initial time window size (0.1s)
+
 2010-09-17  Francois Chouinard  <fchouinard@gmail.com>
 
 	* plugin.xml: Fixed perspective ID
